# Mr.Strang

./: AppWindow.qml  Background1.qml  CMakeLists.txt  KeyboardChoice.qml  Landing.qml  Login.qml  Main.qml  ModeChoice.qml  PomodoroTimer.qml  README.md  SignIn.qml  SpotifyMini.qml  ToolsPanel.qml  authmanager.cpp  authmanager.h  chatmanager.cpp  chatmanager.h  chatmessage.cpp  chatmessage.h  deviceinfo.cpp  deviceinfo.h  main.cpp  mockai.cpp  mockai.h  resources.qrc  spotifycontroller.cpp  spotifycontroller.h
